--- a/projects/cloud/src/scss/_cloud.scss
+++ b/projects/cloud/src/scss/_cloud.scss
@@ -390,4 +390,10 @@ html, body {
       }
     }
   }
+
+  .hidden-md {
+    @include smaller-than(md) {
+      display: none;
+    }
+  }
 }
